...
                                    }
                                }
                            if tag == selectedTag {
                                Button {
                                    removeSelectedTag()
                                } label: {
                                    Image(systemName: "x.circle")
                                }
                            }
                        } // END OF HSTACK
                        .fixedSize()
                        .readSize { size in
                            tagSize[tag] = size
...
